fenglin:logagent 上下文切换

--- a/C++/bug/上下文切换频繁.md
+++ b/C++/bug/上下文切换频繁.md
@@ -23,13 +23,55 @@
 
 1. 各种现象显示
 
-* dstat: 这个命令只能看系统的整体信息，不能看指定线程的状态信息，但是在系统空闲的时候还是能发现问题的
-![dstat](http://s17.mogucdn.com/p1/160530/idid_ifrteytfga2dsntehazdambqhayde_616x222.jpg)
+    * dstat: 这个命令只能看系统的整体信息，不能看指定线程的状态信息，但是在系统空闲的时候还是能发现问题的
+    ![dstat](http://s17.mogucdn.com/p1/160530/idid_ifrteytfga2dsntehazdambqhayde_616x222.jpg)
 
-* pidstat: 这个命令可以看到某一个进程每一秒各个线程的线程切换次数
-![pidstat](http://s17.mogucdn.com/p1/160530/idid_ifrwgnjugftdsntehazdambqhayde_536x723.jpg)
-
-* perf: 查看某一个线程详细的运行调用情况，可以观察当前为什么cpu切换次数很多
-![perf](http://s17.mogucdn.com/p1/160530/idid_ifrtonbzmq2wcntehazdambqhayde_624x547.jpg)
+    * pidstat: 这个命令可以看到某一个进程每一秒各个线程的线程切换次数
+    ![pidstat](http://s17.mogucdn.com/p1/160530/idid_ifrwgnjugftdsntehazdambqhayde_536x723.jpg)
+    
+    * perf: 查看某一个线程详细的运行调用情况，可以观察当前为什么cpu切换次数很多
+    ![perf](http://s17.mogucdn.com/p1/160530/idid_ifrtonbzmq2wcntehazdambqhayde_624x547.jpg)
 
 2. 分析
+
+从dstat中可以看到一台空闲的机器上下文切换竟然有2000+，这是很难被理解的; 但是dstat太过于笼统，并且和其他进程不能独立出来，所以只能看到这肯定有问题，但是不能知道为什么有问题? 
+
+使用`pidstat 1 10 -wt | grep LogAgent` 可以知道比较详细, 图中可以看到LogAgent中大部分线程上下文切换都维持在4次/s,但是线程4652和4665这两个线程却在一秒100次切换，理论上我的设计模式中没有那么频繁的轮训，所以大概怀疑的应该是rdkafka或者folly的库导致的；
+
+首先我们针对的是4652这个线程进行分析，使用命令为`perf top -t 4652`, 经过一段时间的观察，可以看出这个线程应该是folly的定时器，于是就检查查了我里面使用的这块的代码:
+
+```
+        hhWheelTimer_ = folly::HHWheelTimer::UniquePtr(new folly::HHWheelTimer(eventBase_, std::chrono::milliseconds(500)));
+
+      explicit HHWheelTimer(
+	folly::TimeoutManager* timeoutManager,
+      	std::chrono::milliseconds intervalMS =
+      	    std::chrono::milliseconds(DEFAULT_TICK_INTERVAL),
+      	AsyncTimeout::InternalEnum internal = AsyncTimeout::InternalEnum::NORMAL,
+      	std::chrono::milliseconds defaultTimeoutMS =
+      	    std::chrono::milliseconds(-1)
+	);
+```
+
+这个定时器的第二个参数是定时器的间隔，默认是10ms一次，所以和我观察到的现象很相像，所以可以肯定这个线程的上下文切换应该是就这个导致的；鉴于我的程序定时线程主要是用来做同步数据和上报数据，所以就把它设定成了500ms一次，修改以后上下文切换就下降了很多，基本维持在每秒2次。
+
+关于第二个线程，我通过perf分析之后，可以肯定应该是rdkafka的问题，但是对于这个库不是很熟悉，所以只能先放着；因为只有一个线程是这样，影响不是很大的。
+
+3. perf命令
+
+这个是听同事教给我的方式:
+
+```
+perf record -e  context-switches -ag -- sleep 1
+perf script
+
+```
+
+可以通过这个工具知道你的线程在内核状态下在做什么...我不是很看的懂是真的;
+
+#### 3. 总结
+
+本次LogAgent上下文切换频繁归于以下几个点:
+
+1. rdkafka这个库会有一个最小时间epoll_wait时间，这个时间与`socket.blocking.max.ms`是一致的，默认值是100ms，但是这个问题在于这个时候线程的切换次数也在于20次/s,不是应该是10次吗，很不明白...不过我后来把这个时间戳设置成200ms,这样就减少了一般的上下文切换;
+2. folly的定时器初始值10ms切换，太频繁，但是这个也只是一个线程...
