修改错别字

--- a/C++/bug/上下文切换频繁.md
+++ b/C++/bug/上下文切换频繁.md
@@ -73,5 +73,5 @@ perf script
 
 本次LogAgent上下文切换频繁归于以下几个点:
 
-1. rdkafka这个库会有一个最小时间epoll_wait时间，这个时间与`socket.blocking.max.ms`是一致的，默认值是100ms，但是这个问题在于这个时候线程的切换次数也在于20次/s,不是应该是10次吗，很不明白...不过我后来把这个时间戳设置成200ms,这样就减少了一般的上下文切换;
+1. rdkafka这个库会有一个最小时间epoll_wait时间，这个时间与`socket.blocking.max.ms`是一致的，默认值是100ms，但是这个问题在于这个时候线程的切换次数也在于20次/s,不是应该是10次吗，很不明白...不过我后来把这个时间戳设置成200ms,这样就减少了一半的上下文切换;
 2. folly的定时器初始值10ms切换，太频繁，但是这个也只是一个线程...
