--- a/plan_summary/2016-08-07/本周计划.md
+++ b/plan_summary/2016-08-07/本周计划.md
@@ -11,8 +11,8 @@
     * 增加多集群功能
 
 2. 广告部门kafka安装上线
-    * 解决某一个机器的read速度问题
-    * 安装kafka和zk，提供正常的服务
+    * 解决某一个机器的read速度问题(在解决中)
+    * 安装kafka和zk，提供正常的服务(已完成)
     * 通过logagent进行写入压测
     * 通过jafka来进行读取压测
    
@@ -21,7 +21,7 @@
     * 下线模拟
     * 线上操作
  
- 4. 为进程监控加入过滤条件功能
+ 4. 为进程监控加入过滤条件功能(已完成)
     * 测试过滤功能是否会影响线上
     * 给所有的logagent添加restart过滤
     
@@ -33,7 +33,7 @@
 #### 重要但不是很紧急的事情
 
 1. sentry-meta的bug修复
-    * 初始化catch住
+    * 初始化catch住(已完成)
     * 使用新的包
     
 2. 新版sentry-web要基本全部成型
