--- a/总结/work/状态收集的问题.md
+++ b/总结/work/状态收集的问题.md
@@ -1,4 +1,4 @@
-﻿# 状态收集的问题
+# 状态收集的问题
 
 标签（空格分隔）： C++ 模版
 
@@ -144,6 +144,10 @@ int main(int argc, char const *argv[]) {
 ```
 
 这边如果直接用模板的话，就会有一个问题；就是monitorItem_会变成异构数组，这个我现在还不是很了解，但是听我leader说异构数组用在这个地方其实不合适，所以想到了这个方法，用lambda把这个异构给伪装掉. 但是我还是很想知道异构数组要如何实现；C++大神最后还是告诉我一种方法，不过我还没有摸清楚，等我弄清楚了补上;
+
+#### 4. 用继承链来解决这个问题
+
+首先这个方法的根本是用模板元编程来构成一个继承链，当然这个继承链与单纯的用接口的那种方式不是很一样的，这边通过编译器的递归调用来做到不同类型之间的继承...虽然很吊，但是在使用过程中完全没有第三种或者第二种方式来简单明了，并且还要写很多很多的无关代码...所以这种方式只是为了炫技，不适合用于解决这边提到的这个问题...代码的话，我放在[github]()上面;
     
 
 
